FG-4852.MM.Voiceover.Expand.Collapse ## Added fixes for screen reader on Megamenu

--- a/scss/navigation/megamenu/_megamenu.scss
+++ b/scss/navigation/megamenu/_megamenu.scss
@@ -146,6 +146,12 @@ body {
     position: relative;
     .tbm-item.level-1 {
       margin: 0;
+      &.open {
+        a:first-of-type {
+          position: relative;
+          top: -3px;
+        }
+      }
       .tbm-link-container {
         padding-right: 0.8rem;
         padding-left: 0.8rem;
@@ -182,9 +188,6 @@ body {
             top: -5px;
             transform: rotate(45deg);
             -webkit-transform: rotate(45deg);
-          }
-          &:focus {
-            visibility: hidden;
           }
         }
       }
